--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="home.css">
-  <script src="main.js"></script>v
   <title>Creditos Arg</title>
 </head>
 <body>
- 
+  <script src="main.js"></script>
 </body>
 </html>
