Optimized code, added promises and Dolar API

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         <img src="logo.png" alt="">
         <p>Créditos Argentina</p>
       </div>
-      <div class="links">
+      <div class="contenedorDolar">
+        <p id="dolarOficial">Dolar Oficial:<span id="dolar"></span></p>
+      </div>
+      <!-- <div class="links">
         <a href="#" class="link1"> INICIO </a>
         <a href="#" class="link1"> PREGUNTAS FRECUENTES </a> 
         <button id="btnIniciar">Iniciar sesion</button>
         <button id="btnRegistrarse">Registrarse</button>
-      </div>
+      </div> -->
     </nav>
   </header>
   <main class="main">   
